--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.scss
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.scss
@@ -1,4 +1,15 @@
-.sw-field {
+.sw-field.sw-field--password {
+    .sw-field--password__container {
+        position: relative;
+        width: 100%;
+    }
+    .sw-field__toggle-password-visibility {
+        position: absolute;
+        right: 16px;
+        top: 50%;
+        transform: translate(0, -50%)
+    }
+
     &.sw-field--password.sw-field--password--untoggable .sw-field__input {
         input {
             padding-right: 16px;
