--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
@@ -7,13 +7,15 @@
         {% block sw_price_field_gross %}
             <sw-field type="number"
                       :label="label ? $tc('global.sw-price-field.labelPriceGross') : false"
-                      :suffix="currency.symbol"
                       :validation="validation"
                       :size="compact ? 'small' : 'default'"
                       :min="0"
-                      @input="onPriceGrossChange"
+                      @change="onPriceGrossChange"
                       v-bind="$attrs"
                       v-model="price.gross">
+                <template #suffix>
+                    {{ currency.symbol }}
+                </template>
             </sw-field>
         {% endblock %}
 
@@ -27,13 +29,15 @@
         {% block sw_price_field_net %}
             <sw-field type="number"
                       :label="label ? $tc('global.sw-price-field.labelPriceNet') : false"
-                      :suffix="currency.symbol"
                       :validation="validation"
                       :size="compact ? 'small' : 'default'"
                       :min="0"
-                      @input="onPriceNetChange"
+                      @change="onPriceNetChange"
                       v-bind="$attrs"
                       v-model="price.net">
+                <template #suffix>
+                    {{ currency.symbol }}
+                </template>
             </sw-field>
         {% endblock %}
     </div>
