--- a/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.scss
+++ b/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.scss
@@ -3,11 +3,9 @@ $sw-field-color-secure: $color-emerald;
 
 .sw-field {
     .sw-field__url-input__prefix {
+        cursor: pointer;
         &.is--ssl {
             color: $sw-field-color-secure;
         }
-    }
-    .sw-url-input-ssl-switch__field {
-        margin-top: 22px;
     }
 }
