--- a/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
@@ -1,18 +1,22 @@
-{% block sw_text_field_input %}
+<div class="sw-field sw-field--checkbox" :class="swFieldClasses">
     <div class="sw-field__checkbox">
-    {% block sw_checkbox_field_input %}
         <input type="checkbox"
-               :id="id"
-               :name="displayName"
-               :disabled="disabled ? 'disabled' : false"
-               :checked="value ? 'value' : false"
-               @change="onChange"/>
-    {% endblock %}
-
-    {% block sw_checkbox_field_state %}
+               :id="formFieldName || identification"
+               :name="formFieldName || identification"
+               :checked="currentValue"
+               :disabled="disabled"
+               @change="onChange">
         <div class="sw-field__checkbox-state">
             <sw-icon name="small-default-checkmark-line-small" size="16"></sw-icon>
         </div>
-    {% endblock %}
     </div>
-{% endblock %}
+
+    <label v-if="label" class="sw-field__label" :for="formFieldName || identification">
+        {{ label }}{{ this.required ? '*' : '' }}
+    </label>
+
+    <span>
+        <button v-if="inherited" class="sw-field__button-restore">{{ $tc('global.sw-field.buttonRestoreInheritance') }}</button>
+        <sw-help-text v-if="helpText" :text="helpText"></sw-help-text>
+    </span>
+</div>
