--- a/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.scss
+++ b/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.scss
@@ -13,35 +13,27 @@ $sw-colorpicker-color-error: $color-crimson;
 $sw-colorpicker-font-family: $font-family-default;
 $sw-colorpicker-font-size: 14px;
 
-.sw-colorpicker {
+.sw-field.sw-field--colorpicker {
+    &:not(.is--disabled) {
+        .sw-colorpicker__trigger {
+            cursor: pointer;
 
-    .sw-field__addition .sw-icon.sw-colorpicker__icon {
-        transition: 0.3s color ease-in-out;
-        width: 20px;
-        height: 20px;
-        color: $sw-colorpicker-color-text;
-    }
-
-    .sw-colorpicker__trigger {
-        cursor: pointer;
-
-        &:hover .sw-icon.sw-colorpicker__icon{
-            color: darken($sw-colorpicker-color-text, 20%);
+            &:hover{
+                color: darken($sw-colorpicker-color-text, 20%);
+            }
         }
     }
 
     .sw-colorpicker__previewWrapper {
         position: relative;
-        width: 27px;
+        width: 22px;
         height: 100%;
     }
-
     .sw-colorpicker__previewColor, .sw-colorpicker__previewBackground {
         border-radius: 4px;
         width: 100%;
         height: 100%;
     }
-
     .sw-colorpicker__previewColor {
         position: absolute;
         z-index: 1;
@@ -60,116 +52,108 @@ $sw-colorpicker-font-size: 14px;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Cline x1='0' y1='90' x2='90' y2='0' style='stroke:%23DE294C;stroke-width:10' /%3E%3C/svg%3E");
     }
 
-    &.is--disabled {
-        .sw-field__addition .sw-icon.sw-colorpicker__icon {
-            color: lighten($sw-colorpicker-color-text, 40%);
+    // colorpicker adjustments
+    .picker_wrapper {
+        border: 1px solid $sw-colorpicker-color-border;
+        border-radius: $sw-colorpicker-border-radius;
+        background: $sw-colorpicker-color-background;
+        padding: 10px;
+        box-shadow: 0 3px 6px 0 rgba(120,138,155,0.5);
+
+        &.popup_left {
+            top: 0;
+            right: 0px;
+            margin-top: 35px;
+            margin-right: 6px;
+        }
+
+        &::after {
+            content: '';
+            top: -6px;
+            right: 7px;
+            position: absolute;
+            border-bottom: 10px solid $sw-colorpicker-color-background;
+            border-top: 10px solid transparent;
+            border-right: 10px solid transparent;
+            transform: rotate(135deg);
+            z-index: 3;
+            width: 0;
+            height: 0;
+        }
+        &::before {
+            content: '';
+            top: -7px;
+            right: 7px;
+            position: absolute;
+            border-bottom: 10px solid $sw-colorpicker-color-border;
+            border-top: 10px solid transparent;
+            border-right: 10px solid transparent;
+            transform: rotate(135deg);
+            z-index: 2;
+            width: 0;
+            height: 0;
         }
     }
+    .layout_default .picker_editor {
+        order: 2;
+    }
+    .picker_hue.picker_slider {
+        order: 1;
+    }
+    .picker_done,
+    .picker_arrow {
+        display: none;
+    }
+    .picker_hue,
+    .picker_sl {
+        border-radius: $sw-colorpicker-border-radius;
+        box-shadow: none;
+    }
+    .picker_sl {
+        border: 1px solid lighten($color-steam-cloud, 5%);
+    }
+    .picker_hue .picker_slider {
+        padding: 8px 0;
+        margin-top: 4px;
+    }
+    .picker_hue .picker_selector {
+        padding: 10px 0px;
+        border: 3px solid $color-white;
+        box-shadow: 0 0 0 1px $color-steam-cloud;
+    }
+    .picker_alpha .picker_selector {
+        padding: 0px 10px;
+        border: 3px solid $color-white;
+        box-shadow: 0 0 0 1px $color-steam-cloud;
+    }
+    .picker_sl .picker_selector {
+        border: 3px solid $color-white;
+        padding: 6px;
+    }
+    .picker_sample {
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Crect width='30' height='30' x='00' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='30' y='30' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='60' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='00' y='60' fill='%23cdd5db' /%3E%3C/svg%3E");
+        border-radius: $sw-colorpicker-border-radius;
+        box-shadow: none;
+        overflow: hidden;
+        max-width: 32px;
+        height: 32px;
+    }
+    .picker_editor {
+        flex: 1;
 
-    // colorpicker adjustments
-    .sw-colorpicker__field {
-        .picker_wrapper {
+        input {
+            font-size: $sw-colorpicker-font-size;
+            font-family: $sw-colorpicker-font-family;
+            color: $sw-colorpicker-color-text;
+            border-radius: $sw-colorpicker-border-radius;
             border: 1px solid $sw-colorpicker-color-border;
-            border-radius: $sw-colorpicker-border-radius;
-            background: $sw-colorpicker-color-background;
-            padding: 10px;
-            box-shadow: 0 3px 6px 0 rgba(120,138,155,0.5);
+            padding: 0 10px;
+            max-height: 32px;
+            margin-top: 0;
+            outline: none;
 
-            &.popup_left {
-                top: 0;
-                right: 0px;
-                margin-top: 35px;
-                margin-right: 6px;
-            }
-
-            &::after {
-                content: '';
-                top: -6px;
-                right: 7px;
-                position: absolute;
-                border-bottom: 10px solid $sw-colorpicker-color-background;
-                border-top: 10px solid transparent;
-                border-right: 10px solid transparent;
-                transform: rotate(135deg);
-                z-index: 3;
-                width: 0;
-                height: 0;
-            }
-            &::before {
-                content: '';
-                top: -7px;
-                right: 7px;
-                position: absolute;
-                border-bottom: 10px solid $sw-colorpicker-color-border;
-                border-top: 10px solid transparent;
-                border-right: 10px solid transparent;
-                transform: rotate(135deg);
-                z-index: 2;
-                width: 0;
-                height: 0;
-            }
-        }
-        .layout_default .picker_editor {
-            order: 2;
-        }
-        .picker_hue.picker_slider {
-            order: 1;
-        }
-        .picker_done,
-        .picker_arrow {
-            display: none;
-        }
-        .picker_hue,
-        .picker_sl {
-            border-radius: $sw-colorpicker-border-radius;
-            box-shadow: none;
-        }
-        .picker_sl {
-            border: 1px solid lighten($color-steam-cloud, 5%);
-        }
-        .picker_hue .picker_slider {
-            padding: 8px 0;
-            margin-top: 4px;
-        }
-        .picker_hue .picker_selector {
-            padding: 10px 0px;
-            border: 3px solid $color-white;
-            box-shadow: 0 0 0 1px $color-steam-cloud;
-        }
-        .picker_alpha .picker_selector {
-            padding: 0px 10px;
-            border: 3px solid $color-white;
-            box-shadow: 0 0 0 1px $color-steam-cloud;
-        }
-        .picker_sl .picker_selector {
-            border: 3px solid $color-white;
-            padding: 6px;
-        }
-        .picker_sample {
-            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Crect width='30' height='30' x='00' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='30' y='30' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='60' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='00' y='60' fill='%23cdd5db' /%3E%3C/svg%3E");
-            border-radius: $sw-colorpicker-border-radius;
-            box-shadow: none;
-            overflow: hidden;
-            max-width: 32px;
-            height: 32px;
-        }
-        .picker_editor {
-            flex: 1;
-
-            input {
-                font-size: $sw-colorpicker-font-size;
-                font-family: $sw-colorpicker-font-family;
-                color: $sw-colorpicker-color-text;
-                border-radius: $sw-colorpicker-border-radius;
-                border: 1px solid $sw-colorpicker-color-border;
-                padding: 0 10px;
-                max-height: 32px;
-                margin-top: 0;
-                outline: none;
-
-                &:focus {
-                    border-color: $sw-colorpicker-color-focus;
-                }
+            &:focus {
+                border-color: $sw-colorpicker-color-focus;
             }
         }
     }
