--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
@@ -1,25 +1,33 @@
-{% block sw_text_field_input_element %}
-    <input :type="showPassword ? 'text' : 'password'"
-           :id="id"
-           :name="displayName"
-           :placeholder="getInlineSnippet(placeholder)"
-           :disabled="disabled ? 'disabled' : false"
-           @input="onInput"
-           @change="onChange"
-           v-on="additionalEventListeners"
-           :value="currentValue"/>
-{% endblock %}
+<sw-contextual-field class="sw-field--password" v-bind="$attrs" :name="formFieldName">
+    <template #sw-field-input="{ identification, disabled, swBlockSize, setFocusClass, removeFocusClass }">
+        <div class="sw-field--password__container">
+            <input :type="showPassword ? 'text' : 'password'"
+                   :id="identification"
+                   :name="identification"
+                   :placeholder="placeholder"
+                   :disabled="disabled"
+                   value="currentValue"
+                   @input="onInput"
+                   @change="onChange"
+                   @focus="setFocusClass"
+                   @blur="removeFocusClass">
 
-{% block sw_text_field_input_extras %}
-    <span v-if="passwordToggleAble" @click="onTogglePasswordVisibility"
-          :title="showPassword ? $tc('global.sw-field.titleHidePassword') : $tc('global.sw-field.titleShowPassword')"
-          class="sw-field__toggle-password-visibility">
-        {% block sw_field_hide_password_icon %}
-            <sw-icon v-if="showPassword" name="default-eye-crossed" small></sw-icon>
-        {% endblock %}
+            <span v-if="passwordToggleAble" @click="onTogglePasswordVisibility(disabled)"
+                  :title="showPassword ? $tc('global.sw-field.titleHidePassword') : $tc('global.sw-field.titleShowPassword')"
+                  class="sw-field__toggle-password-visibility">
+                <sw-icon v-if="showPassword" name="default-eye-crossed" small></sw-icon>
 
-        {% block sw_field_show_password_icon %}
-            <sw-icon v-else name="default-eye-open" small></sw-icon>
-        {% endblock %}
-    </span>
-{% endblock %}
+                <sw-icon v-else name="default-eye-open" small></sw-icon>
+            </span>
+        </div>
+    </template>
+
+    <template v-if="copyable" #sw-contextual-field-suffix="{ identification }">
+        <sw-field-copyable
+            v-if="copyable"
+           :displayName="identification"
+           :copyableText="currentValue"
+           :tooltip="copyableTooltip">
+        </sw-field-copyable>
+    </template>
+</sw-contextual-field>
