--- a/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
@@ -1,40 +1,37 @@
-{% block sw_text_field_input_element %}
-    <div class="sw-field__select">
-        {% block sw_field_input_select_field %}
-            <select :id="id"
-                    :name="displayName"
-                    :disabled="disabled"
-                    :class="{ 'is--placeholder': currentValue === null }"
-                    @input="onInput"
-                    @change="onChange"
-                    v-if="($slots.default && $slots.default.length > 0) || (options && options.length > 0)"
-                    v-bind="$attrs"
-                    :value="value">
+<sw-block-field class="sw-field--select" :class="swFieldSelectClasses" v-bind="$attrs" :name="formFieldName">
+    <template #sw-field-input="{ identification, helpText, error, disabled, swBlockSize, setFocusClass, removeFocusClass }">
+        <select v-if="($slots.default && $slots.default.length > 0) || (options && options.length > 0)"
+                :name="identification"
+                :id="identification"
+                :class="{ 'is--placeholder': currentValue === null }"
+                :disabled="disabled"
+                :value="currentValue"
+                @change="onChange"
+                @focus="setFocusClass"
+                @blur="removeFocusClass">
 
-                {% block sw_field_input_select_field_placeholder_option %}
-                    <option class="sw-field__placeholder-option" v-if="getInlineSnippet(placeholder)"
-                            :value="null">{{ getInlineSnippet(placeholder) }}</option>
-                {% endblock %}
+            <option v-if="placeholder" class="sw-field__placeholder-option" :value="null">{{ placeholder }}</option>
 
-                {% block sw_field_input_select_field_options %}
-                    <slot v-if="!options"></slot>
+            <template v-if="options && options.length">
+                <option v-for="option in options"
+                        :value="option.id"
+                        :disabled="disabled || option.disabled">
+                    {{ getOptionName(option.name) }}
+                </option>
+            </template>
 
-                    <option v-else v-for="option in options" :value="option.id" :disabled="option.disabled">
-                        {{ getOptionName(option.name) }}
-                    </option>
-                {% endblock %}
+            <template v-else>
+                <slot></slot>
+            </template>
+        </select>
 
-            </select>
-        {% endblock %}
+        <div class="sw-field__select-load-placeholder" v-else>
+            <sw-loader size="20px"></sw-loader>
+        </div>
 
-        {% block sw_field_input_select_field_load_placeholder %}
-            <div class="sw-field__select-load-placeholder" v-else>
-                <sw-loader size="20px"></sw-loader>
-            </div>
-        {% endblock %}
-
-        {% block sw_field_input_select_field_icon %}
+        <div class="sw-field--select__options">
+            <sw-help-text v-if="helpText" :text="helpText"></sw-help-text>
             <sw-icon name="small-arrow-medium-down" small decorative></sw-icon>
-        {% endblock %}
-    </div>
-{% endblock %}
+        </div>
+    </template>
+</sw-block-field>
