--- a/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-url-field/sw-url-field.html.twig
@@ -1,7 +1,6 @@
-{% block sw_prefix %}
-    <sw-field-addition :isPrefix="true">
-        <slot name="prefix" v-if="customPrefix">{{ prefix }}</slot>
-        <span v-else class="sw-field__url-input__prefix" :class="prefixClass">
+<sw-contextual-field class="sw-field--url" v-bind="$attrs" :name="formFieldName">
+    <template #sw-contextual-field-prefix="{ disabled }">
+        <span class="sw-field__url-input__prefix" :class="prefixClass" @click="changeMode(disabled)">
             <sw-icon name="default-lock-closed"
                      :small="true"
                      v-if="sslActive">
@@ -12,30 +11,27 @@
             </sw-icon>
             {{ urlPrefix }}
         </span>
-    </sw-field-addition>
-{% endblock %}
+    </template>
 
-{% block sw_text_field_input_element %}
-    <input type=text
-           :id="id"
-           name="sw-field-url"
-           ref="urlField"
-           class="sw-url-input-field__input"
-           :label="label"
-           :placeholder="getInlineSnippet(placeholder)"
-           :disabled="disabled ? 'disabled' : false"
-           @change="onChange"
-           @input="urlChanged"
-           v-on="additionalEventListeners"
-           v-model="urlInput" />
-{% endblock %}
+    <template #sw-field-input="{identification, error, disabled, swBlockSize, setFocusClass, removeFocusClass }">
+        <input class="sw-url-input-field__input"
+               :name="identification"
+               :id="identification"
+               :value="currentValue"
+               :placeholder="placeholder"
+               :disabled="disabled"
+               @input="onInput"
+               @change="onChange"
+               @focus="setFocusClass"
+               @blur="removeFocusClass">
+    </template>
 
-{% block sw_text_field_extras %}
-    <sw-field type="switch"
-              name="sw-field--url-ssl"
-              class="sw-url-input-ssl-switch__field"
-              :label="switchLabel"
-              :value="sslActive"
-              @change="sslChanged">
-    </sw-field>
-{% endblock %}
+    <template v-if="copyable" #sw-contextual-field-suffix="{ identification }">
+        <sw-field-copyable
+            v-if="copyable"
+           :displayName="identification"
+           :copyableText="currentValue"
+           :tooltip="copyableTooltip">
+        </sw-field-copyable>
+    </template>
+</sw-contextual-field>
