--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -1,8 +1,8 @@
 {% block sw_media_field %}
     <div class="sw-media-field">
         {% block sw_media_field_label %}
-            <label v-if="getInlineSnippet(label)" class="sw-media-field__label">
-                {{ getInlineSnippet(label) }}
+            <label v-if="label" class="sw-media-field__label">
+                {{ label }}
             </label>
         {% endblock %}
 
